force-app/main/default/objects/Deal_Registration__c/Deal_Registration__c.object-meta.xml
<CustomObject>
    <label>Deal Registration</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Deal Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>