force-app/main/default/objects/Deal_Registration__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>Opportunity__r.Account.BillingStreet &amp; &quot;, &quot; &amp;
Opportunity__r.Account.BillingCity &amp; &quot;, &quot; &amp;
 Opportunity__r.Account.BillingState &amp; &quot;, &quot; &amp;
 Opportunity__r.Account.BillingCountry &amp; &quot;, &quot; &amp;
 Opportunity__r.Account.BillingPostalCode</formula>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>