force-app/main/default/objects/Deal_Registration__c/fields/Account_Fax__c.field-meta.xml
<CustomField>
    <fullName>Account_Fax__c</fullName>
    <formula>Opportunity__r.Account.Fax</formula>
    <label>Account Fax</label>
    <type>Text</type>
</CustomField>