force-app/main/default/objects/Deal_Registration__c/fields/Contact_Department__c.field-meta.xml
<CustomField>
    <fullName>Contact_Department__c</fullName>
    <formula>TEXT(Account_Contact__r.IM_Functional_Area__c)</formula>
    <label>Contact Department</label>
    <type>Text</type>
</CustomField>