force-app/main/default/objects/Deal_Registration__c/fields/Deal_Details_Information__c.field-meta.xml
<CustomField>
    <fullName>Deal_Details_Information__c</fullName>
    <inlineHelpText>Please provide del details &amp; information on status, next steps &amp; pertinent information</inlineHelpText>
    <label>Deal Details &amp; Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>