force-app/main/default/objects/Deal_Registration__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <formula>Opportunity__r.Owner_Email__c</formula>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>