force-app/main/default/objects/Deal_Registration__c/fields/Estimated_Annual_Booking_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Booking_Value__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <label>Estimated Annual Booking Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>