force-app/main/default/objects/Deal_Registration__c/fields/Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Date__c</fullName>
    <description>CloseDate formerly First Bill Date, Booked Date is now First Bill Date.</description>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Estimated Close Date</label>
    <type>Date</type>
</CustomField>