force-app/main/default/objects/Deal_Registration__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Opportunity__r.Owner_First_Name__c &amp; &quot; &quot; &amp; Opportunity__r.Owner_Last_Name__c</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>