force-app/main/default/objects/Deal_Registration__c/fields/Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Title__c</fullName>
    <formula>Opportunity__r.Owner_Link__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Title</label>
    <type>Text</type>
</CustomField>