force-app/main/default/objects/Deal_Registration__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Opportunity__r.Owner_Link__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>