force-app/main/default/objects/Deal_Registration__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>