force-app/main/default/objects/Deal_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending IM Review</fullName>
            </value>
            <value>
                <fullName>IM Approved</fullName>
            </value>
            <value>
                <fullName>IM Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted to Partner</fullName>
            </value>
            <value>
                <fullName>Accepted by Partner</fullName>
            </value>
            <value>
                <fullName>Rejected by Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>