force-app/main/default/objects/Deal_Registration__c/fields/Submitted_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Partner__c</fullName>
    <label>Submitted to Partner</label>
    <type>DateTime</type>
</CustomField>