force-app/main/default/objects/Deal_Registration__c/fields/Unique_Parent__c.field-meta.xml
<CustomField>
    <fullName>Unique_Parent__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Parent</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>