force-app/main/default/objects/Deal_Registration__c/recordTypes/Deal_Referral.recordType-meta.xml
<RecordType>
    <fullName>Deal_Referral</fullName>
    <active>true</active>
    <description>To be used for Deal Referrals</description>
    <label>Deal Referral</label>
</RecordType>