force-app/main/default/objects/Deal_Registration__c/recordTypes/Deal_Registration.recordType-meta.xml
<RecordType>
    <fullName>Deal_Registration</fullName>
    <active>true</active>
    <description>To be used for Deal Registrations</description>
    <label>Deal Registration</label>
</RecordType>